--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0 # Needed for version history
 
     - name: Setup Java
       uses: actions/setup-java@v4
@@ -30,8 +32,9 @@ jobs:
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.32.6'
+        flutter-version: '3.22.2' # Updated to a more recent stable version
         channel: 'stable'
+        cache: true # Enable caching for faster builds
 
     - name: Install dependencies
       run: flutter pub get
@@ -40,59 +43,65 @@ jobs:
       run: flutter packages pub run build_runner build --delete-conflicting-outputs
 
     - name: Create keystore from secrets
+      if: secrets.KEYSTORE_BASE64
       run: |
-        echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
-      if: ${{ secrets.KEYSTORE_BASE64 }}
+        echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > android/app/keystore.jks
 
     - name: Create key.properties
+      if: secrets.STORE_PASSWORD
       run: |
-        echo "storePassword=${{ secrets.STORE_PASSWORD }}" > android/key.properties
-        echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
-        echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
-        echo "storeFile=keystore.jks" >> android/key.properties
-      if: ${{ secrets.STORE_PASSWORD }}
-
-    - name: Build APK (Release)
-      run: flutter build apk --release --split-per-abi
-
-    - name: Build AAB (Release)
-      run: flutter build appbundle --release
-
-    - name: Build APK (Debug) - fallback if no signing
-      run: flutter build apk --debug
-      if: ${{ !secrets.KEYSTORE_BASE64 }}
+        cat << EOF > android/key.properties
+        storePassword=${{ secrets.STORE_PASSWORD }}
+        keyPassword=${{ secrets.KEY_PASSWORD }}
+        keyAlias=${{ secrets.KEY_ALIAS }}
+        storeFile=keystore.jks
+        EOF
 
     - name: Update version in pubspec.yaml
       run: |
         VERSION="${{ github.event.inputs.version }}"
+        # Validate version format
+        if ! [[ $VERSION =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+          echo "Error: Version must be in format x.y.z (e.g., 1.0.0)"
+          exit 1
+        fi
         
         # Get current build number and increment it
         CURRENT_BUILD=$(grep "^version:" pubspec.yaml | cut -d'+' -f2 | tr -d '\r')
-        if [ -z "$CURRENT_BUILD" ]; then
-          NEW_BUILD=1
-        else
-          NEW_BUILD=$((CURRENT_BUILD + 1))
-        fi
+        NEW_BUILD=$((CURRENT_BUILD + 1))
         
         # Update pubspec.yaml
         sed -i "s/^version:.*/version: $VERSION+$NEW_BUILD/" pubspec.yaml
         
         echo "Updated version to $VERSION+$NEW_BUILD"
+        echo "version=$VERSION+$NEW_BUILD" >> $GITHUB_OUTPUT
+      id: update_version
 
-    - name: Get version info
-      id: version
+    - name: Commit version update
       run: |
-        VERSION=$(grep "^version:" pubspec.yaml | cut -d' ' -f2 | tr -d '\r')
-        echo "version=$VERSION" >> $GITHUB_OUTPUT
+        git config user.name "GitHub Actions"
+        git config user.email "actions@github.com"
+        git commit -am "Bump version to ${{ steps.update_version.outputs.version }}"
+        git push彼此
+
+    - name: Build APK (Release)
+      if: secrets.KEYSTORE_BASE64
+      run: flutter build apk --release --split-per-abi
+
+    - name: Build AAB (Release)
+      if: secrets.KEYSTORE_BASE64
+      run: flutter build appbundle --release
+
+    - name: Build APK (Debug)
+      if: ${{ !secrets.KEYSTORE_BASE64 }}
+      run: flutter build apk --debug
 
     - name: Create Release
       id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v2 # Updated to maintained action
       with:
         tag_name: v${{ github.event.inputs.version }}
-        release_name: USSD Emulator v${{ github.event.inputs.version }}
+        name: USSD Emulator v${{ github.event.inputs.version }}
         body: |
           ## 🚀 USSD Emulator v${{ github.event.inputs.version }} (Manual Release)
           
@@ -117,73 +126,56 @@ jobs:
           **This is a manual release. For automatic releases, use conventional commits on the main branch.**
         draft: false
         prerelease: false
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload APK (Universal)
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      if: secrets.KEYSTORE_BASE64
+      uses: softprops/action-gh-release@v2
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: build/app/outputs/flutter-apk/app-release.apk
-        asset_name: ussd-emulator-${{ steps.version.outputs.version }}-universal.apk
-        asset_content_type: application/vnd.android.package-archive
-      if: ${{ secrets.KEYSTORE_BASE64 }}
+        files: build/app/outputs/flutter-apk/app-release.apk
+        name: ussd-emulator-${{ steps.update_version.outputs.version }}-universal.apk
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload APK (ARM64)
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      if: secrets.KEYSTORE_BASE64
+      uses: softprops/action-gh-release@v2
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
-        asset_name: ussd-emulator-${{ steps.version.outputs.version }}-arm64.apk
-        asset_content_type: application/vnd.android.package-archive
-      if: ${{ secrets.KEYSTORE_BASE64 }}
+        files: build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
+        name: ussd-emulator-${{ steps.update_version.outputs.version }}-arm64.apk
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload APK (ARM)
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      if: secrets.KEYSTORE_BASE64
+      uses: softprops/action-gh-release@v2
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk
-        asset_name: ussd-emulator-${{ steps.version.outputs.version }}-arm.apk
-        asset_content_type: application/vnd.android.package-archive
-      if: ${{ secrets.KEYSTORE_BASE64 }}
+        files: build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk
+        name: ussd-emulator-${{ steps.update_version.outputs.version }}-arm.apk
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload APK (x86_64)
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      if: secrets.KEYSTORE_BASE64
+      uses: softprops/action-gh-release@v2
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: build/app/outputs/flutter-apk/app-x86_64-release.apk
-        asset_name: ussd-emulator-${{ steps.version.outputs.version }}-x86_64.apk
-        asset_content_type: application/vnd.android.package-archive
-      if: ${{ secrets.KEYSTORE_BASE64 }}
+        files: build/app/outputs/flutter-apk/app-x86_64-release.apk
+        name: ussd-emulator-${{ steps.update_version.outputs.version }}-x86_64.apk
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload AAB
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      if: secrets.KEYSTORE_BASE64
+      uses: softprops/action-gh-release@v2
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: build/app/outputs/bundle/release/app-release.aab
-        asset_name: ussd-emulator-${{ steps.version.outputs.version }}.aab
-        asset_content_type: application/octet-stream
-      if: ${{ secrets.KEYSTORE_BASE64 }}
+        files: build/app/outputs/bundle/release/app-release.aab
+        name: ussd-emulator-${{ steps.update_version.outputs.version }}.aab
+        token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Upload Debug APK (fallback)
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: build/app/outputs/flutter-apk/app-debug.apk
-        asset_name: ussd-emulator-${{ steps.version.outputs.version }}-debug.apk
-        asset_content_type: application/vnd.android.package-archive
+    - name: Upload Debug APK
       if: ${{ !secrets.KEYSTORE_BASE64 }}
+      uses: softprops/action-gh-release@v2
+      with:
+        files: build/app/outputs/flutter-apk/app-debug.apk
+        name: ussd-emulator-${{ steps.update_version.outputs.version }}-debug.apk
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Clean up keystore
-      run: rm -f android/app/keystore.jks android/key.properties
       if: always()
+      run: rm -f android/app/keystore.jks android/key.properties
